# retrieval-guard

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: basic_benchmark.py  two_stage_pipeline.py
incoming_files/: a53b8927d_3bcfd3fa8_tech_spec_preview.html
retrieval-guard/: .gitignore
retrieval-guard/examples/: two_stage_pipeline.py
retrieval-guard/pretrained/: MODEL_CARD.md
retrieval-guard/src/retrieval_guard/: cli.py
retrieval-guard/src/retrieval_guard/adapters/: __init__.py  langchain.py
retrieval-guard/src/retrieval_guard/benchmark/: __init__.py  scorer.py  suite.py
retrieval-guard/src/retrieval_guard/verifier/: __init__.py  pipeline.py  verifier.py
retrieval-guard/tests/integration/: test_langchain_adapter.py  test_llamaindex_adapter.py  test_real_models.py
retrieval-guard/tests/unit/: test_pipeline.py  test_reporter.py  test_scorer.py  test_suite.py
src/retrieval_guard/: __init__.py  cli.py  reporter.py
src/retrieval_guard/adapters/: llamaindex.py
src/retrieval_guard/verifier/: pipeline.py
tests/integration/: test_langchain_adapter.py
tests/unit/: test_scorer.py
